--- a/css/custom.css
+++ b/css/custom.css
@@ -249,3 +249,9 @@
   border-color: var(--primaryDark);
   color: var(--white);
 }
+/* General CSS */
+
+.font-14 {
+  font-size: 14px;
+  font-weight: 400;
+}
