--- a/css/global.css
+++ b/css/global.css
@@ -3,7 +3,7 @@
   --primaryColor: #002e5b;
   --primaryDark: #002e5b;
   --primaryLight: #dee2e6;
-  --secondaryColor: #c0944a;
+  --secondaryColor: #d7a31a;
   --redColor: #b43232;
   --lightRedColor: rgba(180, 50, 50, 0.199);
   --greenColor: #00bfba;
